# RustBack

./: .env  Cargo.toml
.github/workflows/: main_Backend-LocalEat.yml
insertData/: data_filtre.csv  data_filtre.json  scriptInsertPoints.py
src/: main.rs
src/api/: login_api.rs  mod.rs  point_api.rs  user_api.rs
src/models/: jwt.rs  login_model.rs  mod.rs  network.rs  point_model.rs  user_model.rs
src/repository/: mongodb_repo.rs
