[package]
name = "rocket-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
base64 = "0.21.4"
log = "0.4.20"
rand = "0.8.5"
serde_json = "1.0.107"
url = "2.4.1"
jsonwebtoken = "9.1.0"
chrono = "0.4.31"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
